--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-vllm==0.8.3
 huggingface_hub
 transformers
 tqdm
@@ -32,4 +31,5 @@ math-verify
 google-generativeai
 psutil
 liger-kernel==0.5.8
-flash-attn==2.7.4.post1
+# vllm==0.8.3
+# flash-attn==2.7.4.post1
