--- a/config/train_rl/1b.yaml
+++ b/config/train_rl/1b.yaml
@@ -1,16 +1,20 @@
 train:
-  number_of_problems_per_batch: 4
-  num_samples_per_problem: 8
+  number_of_problems_per_batch: 2
+  num_samples_per_problem: 2
 
   learning_rate: 5e-7
   beta: 0.001
   mu: 2
 
+  save_policy_to_disk_every_n: 5
+
 teacher_model:
   model_name_or_path: Qwen/Qwen2.5-0.5B-Instruct
+  lora:
+    enable: true
   vllm:
-    temperature: 1.0
-    max_length: 12000
+    temperature: 0.7
+    max_length: 10000
     max_num_seqs: 512
     gpu_memory_utilization: 0.5
     number_of_gpus_per_instance: 1
@@ -23,7 +27,7 @@ student_model:
   model_name_or_path: Qwen/Qwen2.5-0.5B-Instruct
   vllm:
     temperature: 0.6
-    max_length: 12000
+    max_length: 10000
     max_num_seqs: 512
     gpu_memory_utilization: 0.5
     number_of_gpus_per_instance: 1
@@ -36,7 +40,7 @@ judge_model:
   model_name_or_path: Qwen/Qwen2.5-1.5B-Instruct-AWQ
   vllm:
     temperature: 0.6
-    max_length: 12000
+    max_length: 10000
     max_num_seqs: 512
     gpu_memory_utilization: 0.6
     number_of_gpus_per_instance: 1
@@ -54,7 +58,7 @@ huggingface:
 logging:
   wandb: true
   wandb_project: train-rl
-  wandb_run_name: Qwen2.5-1B-Instruct-Lambda1.0
+  wandb_run_name: Qwen2.5-1B-Instruct-Lambda1.0(LoRA)
   run_group: 1b
   wandb_tags: ["1b"]
   save_dir: checkpoints/1b
