--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+vllm==0.13.0
 huggingface_hub
 transformers
 tqdm
@@ -31,5 +32,4 @@ math-verify
 google-generativeai
 psutil
 liger-kernel==0.5.8
-# vllm==0.8.3
 # flash-attn==2.7.4.post1
