Fix: Annotations of ignore_rejected_judge -> true=soft_lambda

--- a/config/train_rl/7b_2GPU.yaml
+++ b/config/train_rl/7b_2GPU.yaml
@@ -1,24 +1,25 @@
 train:
   number_of_problems_per_batch: 8
-  num_samples_per_problem: 4
+  num_samples_per_problem: 8
 
   learning_rate: 3e-7
   beta: 0.001
   mu: 2
 
 teacher_model:
-  model_name_or_path: Qwen/Qwen2.5-7B-Instruct-AWQ
+  model_name_or_path: Qwen/Qwen2.5-7B-Instruct
   lora:
     enable: true
+    rank: 64
+    alpha: 64
   vllm:
-    temperature: 1.0
+    temperature: 0.8
     max_length: 12000
     max_num_seqs: 512
     gpu_memory_utilization: 0.4
     number_of_gpus_per_instance: 1
     max_number_of_instances: -1
     load_and_unload: false
-    use_awq: true
     use_v0: true
     enforce_eager: true
 
@@ -68,16 +69,18 @@ logging:
 generation:
 
   # This turns on thinking.
-  # use_thinking: true
-  # force_thinking: true
+  use_thinking: true
+  force_thinking: true
 
   # This turns on the hard lambda.
   extra_penalty_for_rejected_judges: 1.0 # This is the actual lambda we use.
   use_soft_pedagogical_reward: true # If we set this to true we calculate each rewards following the pedagogical rule independently.
-  ignore_rejected_judge: true # If we set this to false we get the soft lambda runs. (If you use soft pedagogical reward, set this to true)
+  ignore_rejected_judge: true # If we set this to true we get the soft lambda runs. (If you use soft pedagogical reward, set this to true)
 
   use_experimental_shared_memory: false
-  
+
+  number_judge_attempts: 1
+
   # If we turn this on we get the lambda=0.0 run
   # number_judge_attempts: 0
   # judges_rules_prompts_paths: {}
