--- a/config/train_rl/1b.yaml
+++ b/config/train_rl/1b.yaml
@@ -74,7 +74,7 @@ generation:
   # This turns on the hard lambda.
   extra_penalty_for_rejected_judges: 1.0 # This is the actual lambda we use.
   use_soft_pedagogical_reward: true # If we set this to true we calculate each rewards following the pedagogical rule independently.
-  ignore_rejected_judge: true # If we set this to false we get the soft lambda runs. (If you use soft pedagogical reward, set this to true)
+  ignore_rejected_judge: true # If we set this to true we get the soft lambda runs. (If you use soft pedagogical reward, set this to true)
 
   use_experimental_shared_memory: false
   
